--- a/templates/addCourse.html
+++ b/templates/addCourse.html
@@ -22,47 +22,47 @@
         <li>
           <a href="admin.html">
             <i class="bx bx-grid-alt"></i>
-            <span class="links_name">Profil</span>
+            <span class="links_name">Dashboard</span>
           </a>
         </li>
         <li>
-          <a href="riwayat.html">
+          <a href="history.html">
             <i class="bx bx-history"></i>
             <span class="links_name">Riwayat Login</span>
           </a>
         </li>
         <li>
-          <a href="laporan.html">
+          <a href="report.html">
             <i class="bx bxs-report"></i>
             <span class="links_name">Laporan Akhir</span>
           </a>
         </li>
         <li>
-          <a href="guru.html">
-            <i class="bx bxs-user-rectangle"></i>
+          <a href="teacher.html">
+            <i class="bx bxs-user-rectangle bx-tada"></i>
             <span class="links_name">Data Guru</span>
           </a>
         </li>
         <li>
-          <a href="siswa.html">
+          <a href="student.html">
             <i class="bx bx-book-reader"></i>
             <span class="links_name">Data Siswa</span>
           </a>
         </li>
         <li>
-          <a href="kelas.html">
-            <i class="bx bx-building-house"></i>
+          <a href="class.html" class="active">
+            <i class="bx bx-building-house bx-tada"></i>
             <span class="links_name">Data Kelas</span>
           </a>
         </li>
         <li>
-          <a href="mapel.html">
-            <i class="bx bx-book-open"></i>
+          <a href="course.html" class="active">
+            <i class="bx bx-book-open bx-tada"></i>
             <span class="links_name">Data Mapel</span>
           </a>
         </li>
         <li class="log_out">
-          <a href="#" onclick="konfirmasi()">
+          <a href="#" onclick="confirmation()">
             <i class="bx bx-log-out"></i>
             <span class="links_name">Log out</span>
           </a>
@@ -73,13 +73,13 @@
       <nav>
         <div class="sidebar-button">
           <i class="bx bxs-user-circle"></i>
-          <span class="dashboard">Dashboard</span>
+          <span class="dashboard">Input</span>
         </div>
         <div class="search-box">
           <input type="text" placeholder="Search..." />
           <i class="bx bx-search"></i>
         </div>
-        <div class="profile-details">
+        <div class="profile-details" onclick="move('profile.html')">
           <i class="bx bxs-user-circle"></i>
           <span class="admin_name">Username (Level)</span>
           <i class="bx bx-log-in-circle"></i>
@@ -89,20 +89,20 @@
       <div class="home-content">
         <div class="update-boxes2" data-aos="fade-right">
           <div class="recent-update box">
-            <div class="title">Profil</div>
+            <div class="title">Mapel</div>
             <div class="update-details">
               <ul class="details" style="width: 150px; height: 150px">
                 <li class="topic" style="width: 150px; height: 150px">
                   <i
-                    class="bx bx-user-circle"
-                    style="font-size: 150px; color: #0a2558"
+                    class="bx bx-book-open"
+                    style="color: #0a2558; font-size: 150px"
                   ></i>
                 </li>
               </ul>
               <ul class="details">
-                <li class="topic">Username(Level)</li>
-                <li class="topic">Password</li>
-                <li class="topic">Kelas</li>
+                <li class="topic">Nama</li>
+                <li class="topic">Jurusan</li>
+                <li class="topic">Pengajar</li>
               </ul>
               <ul class="details">
                 <li>:</li>
@@ -111,21 +111,37 @@
               </ul>
               <ul class="details">
                 <li>
-                  Username
-                  <hr />
+                  <input
+                    type="text"
+                    name="courseName"
+                    id="courseName"
+                    placeholder="Masukan Nama"
+                  />
                 </li>
                 <li>
-                  ********
-                  <hr />
+                  <input
+                    type="text"
+                    name="major"
+                    id="major"
+                    placeholder="Masukan Jurusan"
+                  />
                 </li>
                 <li>
-                  XI-RPL 1
-                  <hr />
+                  <input
+                    type="text"
+                    name="teacher"
+                    id="teacher"
+                    placeholder="Masukkan Pengajar"
+                  />
                 </li>
               </ul>
             </div>
             <div class="button">
-              <a href="edit.html">Edit Profil</a>
+              <a
+                href="course.html"
+                onClick="alert('Data Mapel Berhasil Ditambahkan')"
+                >Simpan</a
+              >
             </div>
           </div>
         </div>
@@ -142,13 +158,16 @@
         } else sidebarBtn.classList.replace("bx-menu-alt-right", "bx-menu");
       };
 
-      function konfirmasi() {
-        var tanya = confirm("Apakah Anda Yakin ?");
+      function confirmation() {
+        var ask = confirm("Apakah Anda Yakin ?");
 
-        if (tanya === true) {
+        if (ask === true) {
           window.location = "login.html";
         } else {
         }
+      }
+      function move(url) {
+        window.location = url;
       }
     </script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
