--- a/templates/changePassword.html
+++ b/templates/changePassword.html
@@ -20,45 +20,33 @@
       </div>
       <ul class="nav-links">
         <li>
-          <a href="admin.html">
+          <a href="user.html">
             <i class="bx bx-grid-alt"></i>
             <span class="links_name">Dashboard</span>
           </a>
         </li>
         <li>
-          <a href="history.html">
-            <i class="bx bx-history"></i>
-            <span class="links_name">Riwayat Login</span>
+          <a href="grade.html">
+            <i class="bx bxs-file-plus"></i>
+            <span class="links_name">Input Nilai</span>
           </a>
         </li>
         <li>
-          <a href="report.html">
-            <i class="bx bxs-report"></i>
-            <span class="links_name">Laporan Akhir</span>
+          <a href="editGrade.html">
+            <i class="bx bx-edit"></i>
+            <span class="links_name">Edit Nilai</span>
           </a>
         </li>
         <li>
-          <a href="teacher.html">
-            <i class="bx bxs-user-rectangle"></i>
-            <span class="links_name">Data Guru</span>
+          <a href="#" class="active">
+            <i class="bx bx-lock-open-alt bx-tada"></i>
+            <span class="links_name">Ubah Password</span>
           </a>
         </li>
         <li>
-          <a href="student.html">
-            <i class="bx bx-book-reader"></i>
-            <span class="links_name">Data Siswa</span>
-          </a>
-        </li>
-        <li>
-          <a href="class.html">
-            <i class="bx bx-building-house"></i>
-            <span class="links_name">Data Kelas</span>
-          </a>
-        </li>
-        <li>
-          <a href="course.html">
-            <i class="bx bx-book-open"></i>
-            <span class="links_name">Data Mapel</span>
+          <a href="hrTeacher.html">
+            <i class="bx bxs-user-account"></i>
+            <span class="links_name">Wali Kelas</span>
           </a>
         </li>
         <li class="log_out">
@@ -73,14 +61,14 @@
       <nav>
         <div class="sidebar-button">
           <i class="bx bxs-user-circle"></i>
-          <span class="dashboard">Edit</span>
+          <span class="dashboard">Ubah Password</span>
         </div>
         <div class="search-box">
           <input type="text" placeholder="Search..." />
           <i class="bx bx-search"></i>
         </div>
-        <div class="profile-details" onclick="move('profile.html')">
-          <i class="bx bx-user-circle"></i>
+        <div class="profile-details" onclick="move('profileUser.html')">
+          <i class="bx bxs-user-circle"></i>
           <span class="admin_name">Username (Level)</span>
           <i class="bx bx-log-in-circle"></i>
         </div>
@@ -89,12 +77,12 @@
       <div class="home-content">
         <div class="update-boxes2" data-aos="fade-right">
           <div class="recent-update box">
-            <div class="title">Admin</div>
+            <div class="title">Guru</div>
             <div class="update-details">
               <ul class="details" style="width: 150px; height: 150px">
                 <li class="topic" style="width: 150px; height: 150px">
                   <i
-                    class="bx bxs-user-circle"
+                    class="bx bx-user-circle"
                     style="font-size: 150px; color: #0a2558"
                   ></i>
                 </li>
@@ -107,11 +95,12 @@
                   style="visibility: hidden; position: absolute"
                 >
                   <li class="topic">Password Baru</li>
-                  <li class="topic">konfirmasi Password</li>
+                  <li class="topic">kondirmasi Password</li>
                 </section>
                 <li class="topic">NIP</li>
                 <li class="topic">Jenis Kelamin</li>
                 <li class="topic">Level</li>
+                <li class="topic">Mata Pelajaran</li>
                 <li class="topic">Kelas</li>
               </ul>
               <ul class="details">
@@ -128,6 +117,7 @@
                 <li>:</li>
                 <li>:</li>
                 <li>:</li>
+                <li>:</li>
               </ul>
               <ul class="details">
                 <li>
@@ -137,6 +127,7 @@
                     id="username"
                     placeholder="Nama"
                     style="width: 230%"
+                    readonly
                   />
                 </li>
                 <li>
@@ -167,9 +158,9 @@
                   <li>
                     <input
                       type="password"
-                      name="confirmPassword"
-                      id="confirmPassword"
-                      placeholder="Konfirmasi Password"
+                      name="validPassword"
+                      id="validPassword"
+                      placeholder="confirmation Password"
                       style="width: 230%"
                     />
                   </li>
@@ -181,6 +172,7 @@
                     id="nip"
                     placeholder="NIP"
                     style="width: 230%"
+                    readonly
                   />
                 </li>
                 <li>
@@ -190,15 +182,27 @@
                     id="gender"
                     placeholder="Jenis Kelamin"
                     style="width: 230%"
+                    readonly
                   />
                 </li>
                 <li>
                   <input
                     type="text"
-                    name="admin"
-                    id="admin"
+                    name="level"
+                    id="level"
                     placeholder="Level"
                     style="width: 230%"
+                    readonly
+                  />
+                </li>
+                <li>
+                  <input
+                    type="text"
+                    name="course"
+                    id="course"
+                    placeholder="Mata Pelajaran"
+                    style="width: 230%"
+                    readonly
                   />
                 </li>
                 <li>
@@ -208,14 +212,13 @@
                     id="class"
                     placeholder="Kelas"
                     style="width: 230%"
+                    readonly
                   />
                 </li>
               </ul>
             </div>
             <div class="button">
-              <a
-                href="teacher.html"
-                onClick="alert('Guru Berhasil Didaftarkan')"
+              <a href="user.html" onClick="alert('Data Guru Berhasil Diubah')"
                 ><i class="bx bx-save" style="margin-right: 5px"></i>Simpan</a
               >
             </div>
