--- a/templates/editStudent.html
+++ b/templates/editStudent.html
@@ -26,43 +26,43 @@
           </a>
         </li>
         <li>
-          <a href="riwayat.html">
+          <a href="history.html">
             <i class="bx bx-history"></i>
             <span class="links_name">Riwayat Login</span>
           </a>
         </li>
         <li>
-          <a href="laporan.html">
+          <a href="report.html">
             <i class="bx bxs-report"></i>
             <span class="links_name">Laporan Akhir</span>
           </a>
         </li>
         <li>
-          <a href="guru.html">
+          <a href="teacher.html">
             <i class="bx bxs-user-rectangle"></i>
             <span class="links_name">Data Guru</span>
           </a>
         </li>
         <li>
-          <a href="siswa.html">
-            <i class="bx bx-book-reader"></i>
+          <a href="student.html" class="active">
+            <i class="bx bx-book-reader bx-tada"></i>
             <span class="links_name">Data Siswa</span>
           </a>
         </li>
         <li>
-          <a href="kelas.html" class="active">
-            <i class="bx bx-building-house bx-tada"></i>
+          <a href="class.html">
+            <i class="bx bx-building-house"></i>
             <span class="links_name">Data Kelas</span>
           </a>
         </li>
         <li>
-          <a href="mapel.html">
+          <a href="course.html">
             <i class="bx bx-book-open"></i>
             <span class="links_name">Data Mapel</span>
           </a>
         </li>
         <li class="log_out">
-          <a href="#" onclick="konfirmasi()">
+          <a href="#" onclick="confirmation()">
             <i class="bx bx-log-out"></i>
             <span class="links_name">Log out</span>
           </a>
@@ -73,13 +73,13 @@
       <nav>
         <div class="sidebar-button">
           <i class="bx bxs-user-circle"></i>
-          <span class="dashboard">Input</span>
+          <span class="dashboard">Edit</span>
         </div>
         <div class="search-box">
           <input type="text" placeholder="Search..." />
           <i class="bx bx-search"></i>
         </div>
-        <div class="profile-details" onclick="pindah('profil.html')">
+        <div class="profile-details" onclick="move('profile.html')">
           <i class="bx bxs-user-circle"></i>
           <span class="admin_name">Username (Level)</span>
           <i class="bx bx-log-in-circle"></i>
@@ -89,58 +89,72 @@
       <div class="home-content">
         <div class="update-boxes2" data-aos="fade-right">
           <div class="recent-update box">
-            <div class="title">Kelas</div>
+            <div class="title">Siswa</div>
             <div class="update-details">
               <ul class="details" style="width: 150px; height: 150px">
                 <li class="topic" style="width: 150px; height: 150px">
                   <i
-                    class="bx bx-building-house"
-                    style="color: #0a2558; font-size: 150px"
+                    class="bx bx-user-circle"
+                    style="font-size: 150px; color: #0a2558"
                   ></i>
                 </li>
               </ul>
               <ul class="details">
-                <li class="topic">Tingkat</li>
-                <li class="topic">Jurusan</li>
-                <li class="topic">Jumlah</li>
+                <li class="topic">Nama</li>
+                <li class="topic">NIK</li>
+                <li class="topic">Jenis Kelamin</li>
+                <li class="topic">Kelas</li>
               </ul>
               <ul class="details">
                 <li>:</li>
                 <li>:</li>
                 <li>:</li>
+                <li>:</li>
               </ul>
               <ul class="details">
                 <li>
                   <input
                     type="text"
-                    name="tingkat"
-                    id="tingkat"
-                    placeholder="Masukan Tingkat"
+                    name="username"
+                    id="username"
+                    placeholder="Nama"
+                    style="width: 230%"
                   />
                 </li>
                 <li>
                   <input
                     type="text"
-                    name="jurusan"
-                    id="jurusan"
-                    placeholder="Masukan Jurusan"
+                    name="nik"
+                    id="nik"
+                    placeholder="NIK"
+                    style="width: 230%"
                   />
                 </li>
                 <li>
                   <input
                     type="text"
-                    name="jumlah"
-                    id="jumlah"
-                    placeholder="Masukkan Jumlah Kelas"
+                    name="gender"
+                    id="gender"
+                    placeholder="Jenis Kelamin"
+                    style="width: 230%"
+                  />
+                </li>
+                <li>
+                  <input
+                    type="text"
+                    name="class"
+                    id="class"
+                    placeholder="Kelas"
+                    style="width: 230%"
                   />
                 </li>
               </ul>
             </div>
             <div class="button">
               <a
-                href="kelas.html"
-                onClick="alert('Data Kelas Berhasil Ditambahkan')"
-                >Simpan</a
+                href="student.html"
+                onClick="alert('Data Siswa Berhasil Diubah')"
+                ><i class="bx bx-save" style="margin-right: 5px"></i>Simpan</a
               >
             </div>
           </div>
@@ -158,15 +172,15 @@
         } else sidebarBtn.classList.replace("bx-menu-alt-right", "bx-menu");
       };
 
-      function konfirmasi() {
-        var tanya = confirm("Apakah Anda Yakin ?");
+      function confirmation() {
+        var ask = confirm("Apakah Anda Yakin ?");
 
-        if (tanya === true) {
+        if (ask === true) {
           window.location = "login.html";
         } else {
         }
       }
-      function pindah(url) {
+      function move(url) {
         window.location = url;
       }
     </script>
