--- a/templates/editTeacher.html
+++ b/templates/editTeacher.html
@@ -26,43 +26,43 @@
           </a>
         </li>
         <li>
-          <a href="riwayat.html">
+          <a href="history.html">
             <i class="bx bx-history"></i>
             <span class="links_name">Riwayat Login</span>
           </a>
         </li>
         <li>
-          <a href="laporan.html">
+          <a href="report.html">
             <i class="bx bxs-report"></i>
             <span class="links_name">Laporan Akhir</span>
           </a>
         </li>
         <li>
-          <a href="guru.html" class="active">
+          <a href="teacher.html" class="active">
             <i class="bx bxs-user-rectangle bx-tada"></i>
             <span class="links_name">Data Guru</span>
           </a>
         </li>
         <li>
-          <a href="siswa.html">
+          <a href="student.html">
             <i class="bx bx-book-reader"></i>
             <span class="links_name">Data Siswa</span>
           </a>
         </li>
         <li>
-          <a href="kelas.html">
+          <a href="class.html">
             <i class="bx bx-building-house"></i>
             <span class="links_name">Data Kelas</span>
           </a>
         </li>
         <li>
-          <a href="mapel.html">
+          <a href="course.html">
             <i class="bx bx-book-open"></i>
             <span class="links_name">Data Mapel</span>
           </a>
         </li>
         <li class="log_out">
-          <a href="#" onclick="konfirmasi()">
+          <a href="#" onclick="confirmation()">
             <i class="bx bx-log-out"></i>
             <span class="links_name">Log out</span>
           </a>
@@ -79,7 +79,7 @@
           <input type="text" placeholder="Search..." />
           <i class="bx bx-search"></i>
         </div>
-        <div class="profile-details" onclick="pindah('profil.html')">
+        <div class="profile-details" onclick="move('profile.html')">
           <i class="bx bxs-user-circle"></i>
           <span class="admin_name">Username (Level)</span>
           <i class="bx bx-log-in-circle"></i>
@@ -107,11 +107,12 @@
                   style="visibility: hidden; position: absolute"
                 >
                   <li class="topic">Password Baru</li>
-                  <li class="topic">kondirmasi Password</li>
+                  <li class="topic">konfirmasi Password</li>
                 </section>
                 <li class="topic">NIP</li>
                 <li class="topic">Jenis Kelamin</li>
                 <li class="topic">Level</li>
+                <li class="topic">Mata Pelajaran</li>
                 <li class="topic">Kelas</li>
               </ul>
               <ul class="details">
@@ -124,6 +125,7 @@
                   <li>:</li>
                   <li>:</li>
                 </section>
+                <li>:</li>
                 <li>:</li>
                 <li>:</li>
                 <li>:</li>
@@ -158,8 +160,8 @@
                   <li>
                     <input
                       type="password"
-                      name="passwordBaru"
-                      id="passwordBaru"
+                      name="newPassword"
+                      id="newPassword"
                       placeholder="Masukan Password Baru"
                       style="width: 230%"
                     />
@@ -167,9 +169,9 @@
                   <li>
                     <input
                       type="password"
-                      name="validPassword"
-                      id="validPassword"
-                      placeholder="konfirmasi Password"
+                      name="confirmPassword"
+                      id="confirmPassword"
+                      placeholder="Konfirmasi Password"
                       style="width: 230%"
                     />
                   </li>
@@ -186,8 +188,8 @@
                 <li>
                   <input
                     type="text"
-                    name="jk"
-                    id="jk"
+                    name="gender"
+                    id="gender"
                     placeholder="Jenis Kelamin"
                     style="width: 230%"
                   />
@@ -195,8 +197,8 @@
                 <li>
                   <input
                     type="text"
-                    name="admin"
-                    id="admin"
+                    name="level"
+                    id="level"
                     placeholder="Level"
                     style="width: 230%"
                   />
@@ -204,8 +206,17 @@
                 <li>
                   <input
                     type="text"
-                    name="kelas"
-                    id="kelas"
+                    name="course"
+                    id="course"
+                    placeholder="Mata Pelajaran"
+                    style="width: 230%"
+                  />
+                </li>
+                <li>
+                  <input
+                    type="text"
+                    name="class"
+                    id="class"
                     placeholder="Kelas"
                     style="width: 230%"
                   />
@@ -213,7 +224,9 @@
               </ul>
             </div>
             <div class="button">
-              <a href="guru.html" onClick="alert('Data Guru Berhasil Diubah')"
+              <a
+                href="teacher.html"
+                onClick="alert('Data Guru Berhasil Diubah')"
                 ><i class="bx bx-save" style="margin-right: 5px"></i>Simpan</a
               >
             </div>
@@ -232,15 +245,15 @@
         } else sidebarBtn.classList.replace("bx-menu-alt-right", "bx-menu");
       };
 
-      function konfirmasi() {
-        var tanya = confirm("Apakah Anda Yakin ?");
+      function confirmation() {
+        var ask = confirmation("Apakah Anda Yakin ?");
 
-        if (tanya === true) {
+        if (ask === true) {
           window.location = "login.html";
         } else {
         }
       }
-      function pindah(url) {
+      function move(url) {
         window.location = url;
       }
     </script>
