--- a/templates/hrTeacher.html
+++ b/templates/hrTeacher.html
@@ -20,49 +20,37 @@
       </div>
       <ul class="nav-links">
         <li>
-          <a href="admin.html">
+          <a href="user.html">
             <i class="bx bx-grid-alt"></i>
             <span class="links_name">Dashboard</span>
           </a>
         </li>
         <li>
+          <a href="grade.html">
+            <i class="bx bxs-file-plus"></i>
+            <span class="links_name">Input Nilai</span>
+          </a>
+        </li>
+        <li>
+          <a href="editGrade.html">
+            <i class="bx bx-edit"></i>
+            <span class="links_name">Edit Nilai</span>
+          </a>
+        </li>
+        <li>
+          <a href="changePassword.html">
+            <i class="bx bx-lock-open-alt"></i>
+            <span class="links_name">Ubah Password</span>
+          </a>
+        </li>
+        <li>
           <a href="#" class="active">
-            <i class="bx bx-history bx-spin"></i>
-            <span class="links_name">Riwayat Login</span>
-          </a>
-        </li>
-        <li>
-          <a href="laporan.html">
-            <i class="bx bxs-report"></i>
-            <span class="links_name">Laporan Akhir</span>
-          </a>
-        </li>
-        <li>
-          <a href="guru.html">
-            <i class="bx bxs-user-rectangle"></i>
-            <span class="links_name">Data Guru</span>
-          </a>
-        </li>
-        <li>
-          <a href="siswa.html">
-            <i class="bx bx-book-reader"></i>
-            <span class="links_name">Data Siswa</span>
-          </a>
-        </li>
-        <li>
-          <a href="kelas.html">
-            <i class="bx bx-building-house"></i>
-            <span class="links_name">Data Kelas</span>
-          </a>
-        </li>
-        <li>
-          <a href="mapel.html">
-            <i class="bx bx-book-open"></i>
-            <span class="links_name">Data Mapel</span>
+            <i class="bx bxs-user-account bx-tada"></i>
+            <span class="links_name">Wali Kelas</span>
           </a>
         </li>
         <li class="log_out">
-          <a href="#" onclick="konfirmasi()">
+          <a href="#" onclick="confirmation()">
             <i class="bx bx-log-out"></i>
             <span class="links_name">Log out</span>
           </a>
@@ -73,13 +61,13 @@
       <nav>
         <div class="sidebar-button">
           <i class="bx bxs-user-circle"></i>
-          <span class="dashboard">Riwayat</span>
+          <span class="dashboard">Data Kelas</span>
         </div>
         <div class="search-box">
           <input type="text" placeholder="Search..." />
           <i class="bx bx-search"></i>
         </div>
-        <div class="profile-details" onclick="pindah('profil.html')">
+        <div class="profile-details" onclick="move('profile.html')">
           <i class="bx bxs-user-circle"></i>
           <span class="admin_name">Username (Level)</span>
           <i class="bx bx-log-in-circle"></i>
@@ -87,57 +75,59 @@
       </nav>
 
       <div class="home-content">
-        <div class="update-boxes" data-aos="fade-right">
+        <div class="update-boxes2" data-aos="fade-right">
           <div class="recent-update box">
-            <div class="title">Riwayat</div>
-            <div class="update-details">
+            <div class="title">Kelas</div>
+            <div class="update-details" style="float: none">
               <ul class="details">
-                <li class="topic">Waktu</li>
-                <li>09.30</li>
-                <li>08.00</li>
+                <li class="topic">No</li>
+                <li>1</li>
+                <li>2</li>
               </ul>
               <ul class="details">
-                <li class="topic">Tanggal</li>
-                <li>17-02-2022</li>
-                <li>18-02-2022</li>
+                <li class="topic">Nama</li>
+                <li>nama 1</li>
+                <li>nam 2</li>
               </ul>
               <ul class="details">
-                <li class="topic">User</li>
-                <li>Username</li>
-                <li>Username</li>
+                <li class="topic">NIK</li>
+                <li>001</li>
+                <li>002</li>
               </ul>
               <ul class="details">
-                <li class="topic">Kelas</li>
-                <li>XI-RPL 1</li>
-                <li>XI-RPL 2</li>
+                <li class="topic">Jenis Kelamin</li>
+                <li>Laki-Laki</li>
+                <li>Perempuan</li>
+              </ul>
+              <ul class="details">
+                <li class="topic">Progres</li>
+                <li>80%</li>
+                <li>70%</li>
+              </ul>
+              <ul class="details" style="text-align: center">
+                <li class="topic">Tindakan</li>
+                <li>
+                  <ul class="action">
+                    <li>
+                      <a href="#" class="print"
+                        ><i class="bx bx-printer" style="margin-right: 10px"></i
+                        >Print</a
+                      >
+                    </li>
+                  </ul>
+                </li>
+                <li>
+                  <ul class="action">
+                    <li>
+                      <a href="#" class="print"
+                        ><i class="bx bx-printer" style="margin-right: 10px"></i
+                        >Print</a
+                      >
+                    </li>
+                  </ul>
+                </li>
               </ul>
             </div>
-            <div class="button">
-              <a href="#">See All</a>
-            </div>
-          </div>
-          <div class="top-update box" data-aos="fade-left">
-            <div class="title">Wali Kelas</div>
-            <ul class="top-update-details">
-              <li>
-                <a href="#">
-                  <img
-                    src="https://img.icons8.com/external-nawicon-flat-nawicon/50/000000/external-teacher-back-to-school-nawicon-flat-nawicon.png"
-                  />
-                  <span class="item">Nama</span>
-                </a>
-                <span class="desc">Kelas</span>
-              </li>
-              <li>
-                <a href="#">
-                  <img
-                    src="https://img.icons8.com/external-nawicon-flat-nawicon/50/000000/external-teacher-back-to-school-nawicon-flat-nawicon-2.png"
-                  />
-                  <span class="item">Nama</span>
-                </a>
-                <span class="desc">kelas</span>
-              </li>
-            </ul>
           </div>
         </div>
       </div>
@@ -153,16 +143,25 @@
         } else sidebarBtn.classList.replace("bx-menu-alt-right", "bx-menu");
       };
 
-      function konfirmasi() {
-        var tanya = confirm("Apakah Anda Yakin ?");
+      function confirmation() {
+        var ask = confirm("Apakah Anda Yakin ?");
 
-        if (tanya === true) {
+        if (ask === true) {
           window.location = "login.html";
         } else {
         }
       }
 
-      function pindah(url) {
+      function confirmation2() {
+        var ask = confirm("Apakah Anda Yakin ?");
+
+        if (ask === true) {
+          alert("Data Berhasil Dihapus");
+        } else {
+        }
+      }
+
+      function move(url) {
         window.location = url;
       }
     </script>
