--- a/templates/profileUser.html
+++ b/templates/profileUser.html
@@ -26,43 +26,49 @@
           </a>
         </li>
         <li>
-          <a href="riwayat.html">
+          <a href="history.html">
             <i class="bx bx-history"></i>
             <span class="links_name">Riwayat Login</span>
           </a>
         </li>
         <li>
-          <a href="laporan.html">
+          <a href="report.html">
             <i class="bx bxs-report"></i>
             <span class="links_name">Laporan Akhir</span>
           </a>
         </li>
         <li>
-          <a href="guru.html">
+          <a href="teacher.html">
             <i class="bx bxs-user-rectangle"></i>
             <span class="links_name">Data Guru</span>
           </a>
         </li>
         <li>
-          <a href="siswa.html">
-            <i class="bx bx-book-reader bx-tada"></i>
+          <a href="student.html">
+            <i class="bx bx-book-reader"></i>
             <span class="links_name">Data Siswa</span>
           </a>
         </li>
         <li>
-          <a href="kelas.html" class="active">
+          <a href="class.html">
             <i class="bx bx-building-house"></i>
             <span class="links_name">Data Kelas</span>
           </a>
         </li>
         <li>
-          <a href="mapel.html">
+          <a href="course.html">
             <i class="bx bx-book-open"></i>
             <span class="links_name">Data Mapel</span>
           </a>
         </li>
+        <li>
+          <a href="hrTeacher.html">
+            <i class="bx bxs-user-account"></i>
+            <span class="links_name">Wali Kelas</span>
+          </a>
+        </li>
         <li class="log_out">
-          <a href="#" onclick="konfirmasi()">
+          <a href="#" onclick="confirmation()">
             <i class="bx bx-log-out"></i>
             <span class="links_name">Log out</span>
           </a>
@@ -73,13 +79,13 @@
       <nav>
         <div class="sidebar-button">
           <i class="bx bxs-user-circle"></i>
-          <span class="dashboard">Edit</span>
+          <span class="dashboard">Dashboard</span>
         </div>
         <div class="search-box">
           <input type="text" placeholder="Search..." />
           <i class="bx bx-search"></i>
         </div>
-        <div class="profile-details" onclick="pindah('profil.html')">
+        <div class="profile-details">
           <i class="bx bxs-user-circle"></i>
           <span class="admin_name">Username (Level)</span>
           <i class="bx bx-log-in-circle"></i>
@@ -89,60 +95,46 @@
       <div class="home-content">
         <div class="update-boxes2" data-aos="fade-right">
           <div class="recent-update box">
-            <div class="title">kelas</div>
+            <div class="title">Profil</div>
             <div class="update-details">
               <ul class="details" style="width: 150px; height: 150px">
                 <li class="topic" style="width: 150px; height: 150px">
                   <i
-                    class="bx bx-building-house"
-                    style="color: #0a2558; font-size: 150px"
+                    class="bx bx-user-circle"
+                    style="font-size: 150px; color: #0a2558"
                   ></i>
                 </li>
               </ul>
               <ul class="details">
-                <li class="topic">Tingkat</li>
-                <li class="topic">Jurusan</li>
-                <li class="topic">Jumlah</li>
+                <li class="topic">Username(Level)</li>
+                <li class="topic">Password</li>
+                <li class="topic">Mata Pelajaran</li>
+                <li class="topic">Kelas</li>
               </ul>
               <ul class="details">
                 <li>:</li>
                 <li>:</li>
                 <li>:</li>
+                <li>:</li>
               </ul>
               <ul class="details">
                 <li>
-                  <input
-                    type="text"
-                    name="tingkat"
-                    id="tingkat"
-                    placeholder="Tingkat"
-                    style="width: 230%"
-                  />
+                  Username
+                  <hr />
                 </li>
                 <li>
-                  <input
-                    type="text"
-                    name="jurusan"
-                    id="jurusan"
-                    placeholder="Jurusan"
-                    style="width: 230%"
-                  />
+                  ********
+                  <hr />
                 </li>
                 <li>
-                  <input
-                    type="text"
-                    name="jumlah"
-                    id="jumlah"
-                    placeholder="Jumlah Kelas"
-                    style="width: 230%"
-                  />
+                  MTK
+                  <hr />
+                </li>
+                <li>
+                  XI-RPL 1
+                  <hr />
                 </li>
               </ul>
-            </div>
-            <div class="button">
-              <a href="kelas.html" onClick="alert('Data Kelas Berhasil Diubah')"
-                ><i class="bx bx-save" style="margin-right: 5px"></i>Simpan</a
-              >
             </div>
           </div>
         </div>
@@ -159,16 +151,13 @@
         } else sidebarBtn.classList.replace("bx-menu-alt-right", "bx-menu");
       };
 
-      function konfirmasi() {
-        var tanya = confirm("Apakah Anda Yakin ?");
+      function confirmation() {
+        var ask = confirm("Apakah Anda Yakin ?");
 
-        if (tanya === true) {
+        if (ask === true) {
           window.location = "login.html";
         } else {
         }
-      }
-      function pindah(url) {
-        window.location = url;
       }
     </script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
