--- a/templates/report.html
+++ b/templates/report.html
@@ -20,8 +20,8 @@
       </div>
       <ul class="nav-links">
         <li>
-          <a href="#" class="active">
-            <i class="bx bx-grid-alt bx-tada"></i>
+          <a href="admin.html">
+            <i class="bx bx-grid-alt"></i>
             <span class="links_name">Dashboard</span>
           </a>
         </li>
@@ -32,8 +32,8 @@
           </a>
         </li>
         <li>
-          <a href="report.html">
-            <i class="bx bxs-report"></i>
+          <a href="#" class="active">
+            <i class="bx bxs-report bx-tada"></i>
             <span class="links_name">Laporan Akhir</span>
           </a>
         </li>
@@ -73,7 +73,7 @@
       <nav>
         <div class="sidebar-button">
           <i class="bx bxs-user-circle"></i>
-          <span class="dashboard">Dashboard</span>
+          <span class="dashboard">Laporan</span>
         </div>
         <div class="search-box">
           <input type="text" placeholder="Search..." />
@@ -87,98 +87,67 @@
       </nav>
 
       <div class="home-content">
-        <div class="overview-boxes">
-          <div class="box" data-aos="fade-right">
-            <div class="right-side">
-              <div class="box-topic">Guru</div>
-              <div class="number">100</div>
-              <div class="indicator">
-                <i class="bx bxs-edit"></i>
-                <span class="text">Terkahir Diedit</span>
-              </div>
-            </div>
-            <i class="bx bxs-circle-three-quarter logo bx-spin"></i>
-          </div>
-          <div class="box" data-aos="fade-down">
-            <div class="right-side">
-              <div class="box-topic">Kelas</div>
-              <div class="number">38</div>
-              <div class="indicator">
-                <i class="bx bxs-edit"></i>
-                <span class="text">Terkahir Diedit</span>
-              </div>
-            </div>
-            <i class="bx bxs-circle-three-quarter logo two bx-spin"></i>
-          </div>
-          <div class="box" data-aos="fade-down">
-            <div class="right-side">
-              <div class="box-topic">Siswa</div>
-              <div class="number">300</div>
-              <div class="indicator">
-                <i class="bx bxs-edit"></i>
-                <span class="text">Terakhir Diedit</span>
-              </div>
-            </div>
-            <i class="bx bxs-circle-three-quarter logo three bx-spin"></i>
-          </div>
-          <div class="box" data-aos="fade-left">
-            <div class="right-side">
-              <div class="box-topic">Mapel</div>
-              <div class="number">15</div>
-              <div class="indicator">
-                <i class="bx bxs-edit"></i>
-                <span class="text">Terkahir Diedit</span>
-              </div>
-            </div>
-            <i class="bx bxs-circle-three-quarter logo four bx-spin"></i>
-          </div>
-        </div>
-
-        <div class="update-boxes">
-          <div class="recent-update box" data-aos="fade-right">
-            <div class="title">Update</div>
+        <div class="update-boxes" data-aos="fade-up">
+          <div class="recent-update box">
+            <div class="title">Laporan Akhir</div>
             <div class="update-details">
+              <ul class="details">
+                <li class="topic">No</li>
+                <li>1</li>
+                <li>2</li>
+              </ul>
               <ul class="details">
                 <li class="topic">Tanggal</li>
                 <li>17-02-2022</li>
                 <li>18-02-2022</li>
               </ul>
               <ul class="details">
-                <li class="topic">User</li>
-                <li>Username</li>
-                <li>Username</li>
+                <li class="topic">Jurusan</li>
+                <li>AK</li>
+                <li>RPL</li>
               </ul>
               <ul class="details">
                 <li class="topic">Kelas</li>
                 <li>XI-RPL 1</li>
                 <li>XI-RPL 2</li>
               </ul>
-              <ul class="details">
-                <li class="topic">Tindakan</li>
-                <li>Input</li>
-                <li>Update</li>
-              </ul>
             </div>
             <div class="button">
               <a href="#">See All</a>
             </div>
           </div>
-          <div class="top-update box" data-aos="fade-left">
-            <div class="title">Progres(%)</div>
+          <div class="top-update box" data-aos="fade-down">
+            <div class="title">
+              Export
+              <i class="bx bxs-file-export"></i>
+            </div>
             <ul class="top-update-details">
               <li>
                 <a href="#">
-                  <i class="bx bx-loader-alt bx-spin" style="color: blue"></i>
+                  <i class="bx bxs-x-circle" style="color: red"></i>
                   <span class="item">XI-RPL1</span>
                 </a>
-                <span class="desc">10%</span>
+                <div class="button">
+                  <a
+                    href="admin.html"
+                    onclick="return false"
+                    style="background: rgb(61, 61, 61); cursor: default"
+                    ><i class="bx bx-printer" style="margin-right: 5px"></i
+                    >Print</a
+                  >
+                </div>
               </li>
               <li>
                 <a href="#">
-                  <i class="bx bx-loader-alt bx-spin" style="color: blue"></i>
+                  <i class="bx bxs-check-circle" style="color: green"></i>
                   <span class="item">XI-RPL2</span>
                 </a>
-                <span class="desc">30%</span>
+                <div class="button">
+                  <a href="admin.html"
+                    ><i class="bx bx-printer" style="margin-right: 5px"></i
+                    >Print</a
+                  >
+                </div>
               </li>
             </ul>
           </div>
