--- a/templates/user.html
+++ b/templates/user.html
@@ -26,39 +26,27 @@
           </a>
         </li>
         <li>
-          <a href="history.html">
-            <i class="bx bx-history"></i>
-            <span class="links_name">Riwayat Login</span>
+          <a href="grade.html">
+            <i class="bx bxs-file-plus"></i>
+            <span class="links_name">Input Nilai</span>
           </a>
         </li>
         <li>
-          <a href="report.html">
-            <i class="bx bxs-report"></i>
-            <span class="links_name">Laporan Akhir</span>
+          <a href="editGrade.html">
+            <i class="bx bx-edit"></i>
+            <span class="links_name">Edit Nilai</span>
           </a>
         </li>
         <li>
-          <a href="teacher.html">
-            <i class="bx bxs-user-rectangle"></i>
-            <span class="links_name">Data Guru</span>
+          <a href="changePassword.html">
+            <i class="bx bx-lock-open-alt"></i>
+            <span class="links_name">Ubah Password</span>
           </a>
         </li>
         <li>
-          <a href="student.html">
-            <i class="bx bx-book-reader"></i>
-            <span class="links_name">Data Siswa</span>
-          </a>
-        </li>
-        <li>
-          <a href="class.html">
-            <i class="bx bx-building-house"></i>
-            <span class="links_name">Data Kelas</span>
-          </a>
-        </li>
-        <li>
-          <a href="course.html">
-            <i class="bx bx-book-open"></i>
-            <span class="links_name">Data Mapel</span>
+          <a href="hrTeacher.html">
+            <i class="bx bxs-user-account"></i>
+            <span class="links_name">Wali Kelas</span>
           </a>
         </li>
         <li class="log_out">
@@ -79,7 +67,7 @@
           <input type="text" placeholder="Search..." />
           <i class="bx bx-search"></i>
         </div>
-        <div class="profile-details" onclick="move('profile.html')">
+        <div class="profile-details" onclick="move('profileUser.html')">
           <i class="bx bxs-user-circle"></i>
           <span class="admin_name">Username (Level)</span>
           <i class="bx bx-log-in-circle"></i>
@@ -90,47 +78,47 @@
         <div class="overview-boxes">
           <div class="box" data-aos="fade-right">
             <div class="right-side">
-              <div class="box-topic">Guru</div>
+              <div class="box-topic">Nilai Yang Diisi</div>
               <div class="number">100</div>
               <div class="indicator">
                 <i class="bx bxs-edit"></i>
                 <span class="text">Terkahir Diedit</span>
               </div>
             </div>
-            <i class="bx bxs-circle-three-quarter logo bx-spin"></i>
+            <i class="bx bx-task logo two bx-tada"></i>
           </div>
           <div class="box" data-aos="fade-down">
             <div class="right-side">
-              <div class="box-topic">Kelas</div>
+              <div class="box-topic">Nilai Kosong</div>
               <div class="number">38</div>
               <div class="indicator">
                 <i class="bx bxs-edit"></i>
                 <span class="text">Terkahir Diedit</span>
               </div>
             </div>
-            <i class="bx bxs-circle-three-quarter logo two bx-spin"></i>
+            <i class="bx bx-task-x logo four bx-tada"></i>
           </div>
           <div class="box" data-aos="fade-down">
             <div class="right-side">
-              <div class="box-topic">Siswa</div>
+              <div class="box-topic">Nilai Perbaikan</div>
               <div class="number">300</div>
               <div class="indicator">
                 <i class="bx bxs-edit"></i>
                 <span class="text">Terakhir Diedit</span>
               </div>
             </div>
-            <i class="bx bxs-circle-three-quarter logo three bx-spin"></i>
+            <i class="bx bx-sync logo three bx-tada"></i>
           </div>
           <div class="box" data-aos="fade-left">
             <div class="right-side">
-              <div class="box-topic">Mapel</div>
-              <div class="number">15</div>
+              <div class="box-topic">KKM</div>
+              <div class="number">75</div>
               <div class="indicator">
                 <i class="bx bxs-edit"></i>
                 <span class="text">Terkahir Diedit</span>
               </div>
             </div>
-            <i class="bx bxs-circle-three-quarter logo four bx-spin"></i>
+            <i class="bx bx-error-circle logo bx-tada"></i>
           </div>
         </div>
 
@@ -144,9 +132,9 @@
                 <li>18-02-2022</li>
               </ul>
               <ul class="details">
-                <li class="topic">User</li>
-                <li>Username</li>
-                <li>Username</li>
+                <li class="topic">Waktu</li>
+                <li>09.30</li>
+                <li>08.00</li>
               </ul>
               <ul class="details">
                 <li class="topic">Kelas</li>
