--- a/templates/addClass.html
+++ b/templates/addClass.html
@@ -8,8 +8,8 @@
       href="https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="fontawesome/css/all.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script type="text/javascript" src="chartjs/Chart.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body>
@@ -26,43 +26,43 @@
           </a>
         </li>
         <li>
-          <a href="riwayat.html">
+          <a href="history.html">
             <i class="bx bx-history"></i>
             <span class="links_name">Riwayat Login</span>
           </a>
         </li>
         <li>
-          <a href="#" class="active">
-            <i class="bx bxs-report bx-tada"></i>
+          <a href="report.html">
+            <i class="bx bxs-report"></i>
             <span class="links_name">Laporan Akhir</span>
           </a>
         </li>
         <li>
-          <a href="guru.html">
+          <a href="teacher.html">
             <i class="bx bxs-user-rectangle"></i>
             <span class="links_name">Data Guru</span>
           </a>
         </li>
         <li>
-          <a href="siswa.html">
+          <a href="student.html">
             <i class="bx bx-book-reader"></i>
             <span class="links_name">Data Siswa</span>
           </a>
         </li>
         <li>
-          <a href="kelas.html">
-            <i class="bx bx-building-house"></i>
+          <a href="class.html" class="active">
+            <i class="bx bx-building-house bx-tada"></i>
             <span class="links_name">Data Kelas</span>
           </a>
         </li>
         <li>
-          <a href="mapel.html">
+          <a href="course.html">
             <i class="bx bx-book-open"></i>
             <span class="links_name">Data Mapel</span>
           </a>
         </li>
         <li class="log_out">
-          <a href="#" onclick="konfirmasi()">
+          <a href="#" onclick="confirmation()">
             <i class="bx bx-log-out"></i>
             <span class="links_name">Log out</span>
           </a>
@@ -73,13 +73,13 @@
       <nav>
         <div class="sidebar-button">
           <i class="bx bxs-user-circle"></i>
-          <span class="dashboard">Laporan</span>
+          <span class="dashboard">Input</span>
         </div>
         <div class="search-box">
           <input type="text" placeholder="Search..." />
           <i class="bx bx-search"></i>
         </div>
-        <div class="profile-details" onclick="pindah('profil.html')">
+        <div class="profile-details" onclick="move('profile.html')">
           <i class="bx bxs-user-circle"></i>
           <span class="admin_name">Username (Level)</span>
           <i class="bx bx-log-in-circle"></i>
@@ -87,69 +87,62 @@
       </nav>
 
       <div class="home-content">
-        <div class="update-boxes" data-aos="fade-up">
+        <div class="update-boxes2" data-aos="fade-right">
           <div class="recent-update box">
-            <div class="title">Laporan Akhir</div>
+            <div class="title">Kelas</div>
             <div class="update-details">
-              <ul class="details">
-                <li class="topic">No</li>
-                <li>1</li>
-                <li>2</li>
+              <ul class="details" style="width: 150px; height: 150px">
+                <li class="topic" style="width: 150px; height: 150px">
+                  <i
+                    class="bx bx-building-house"
+                    style="color: #0a2558; font-size: 150px"
+                  ></i>
+                </li>
               </ul>
               <ul class="details">
-                <li class="topic">Tanggal</li>
-                <li>17-02-2022</li>
-                <li>18-02-2022</li>
-              </ul>
-              <ul class="details">
+                <li class="topic">Tingkat</li>
                 <li class="topic">Jurusan</li>
-                <li>AK</li>
-                <li>RPL</li>
+                <li class="topic">Jumlah</li>
               </ul>
               <ul class="details">
-                <li class="topic">Kelas</li>
-                <li>XI-RPL 1</li>
-                <li>XI-RPL 2</li>
+                <li>:</li>
+                <li>:</li>
+                <li>:</li>
+              </ul>
+              <ul class="details">
+                <li>
+                  <input
+                    type="text"
+                    name="level"
+                    id="level"
+                    placeholder="Masukan Tingkat"
+                  />
+                </li>
+                <li>
+                  <input
+                    type="text"
+                    name="major"
+                    id="major"
+                    placeholder="Masukan Jurusan"
+                  />
+                </li>
+                <li>
+                  <input
+                    type="text"
+                    name="total"
+                    id="total"
+                    placeholder="Masukkan Jumlah Kelas"
+                  />
+                </li>
               </ul>
             </div>
             <div class="button">
-              <a href="#">See All</a>
+              <a
+                href="class.html"
+                onClick="alert('Data Kelas Berhasil Ditambahkan')"
+                >Simpan</a
+              >
             </div>
-          </div>
-          <div class="top-update box" data-aos="fade-down">
-            <div class="title">
-              Export
-              <i class="bx bxs-file-export"></i>
-            </div>
-            <ul class="top-update-details">
-              <li>
-                <a href="#">
-                  <i class="bx bxs-x-circle" style="color: red"></i>
-                  <span class="item">XI-RPL1</span>
-                </a>
-                <div class="button">
-                  <a
-                    href="admin.html"
-                    onclick="return false"
-                    style="background: rgb(61, 61, 61); cursor: default"
-                    ><i class="bx bx-printer" style="margin-right: 5px"></i
-                    >Print</a
-                  >
-                </div>
-              </li>
-              <li>
-                <a href="#">
-                  <i class="bx bxs-check-circle" style="color: green"></i>
-                  <span class="item">XI-RPL2</span>
-                </a>
-                <div class="button">
-                  <a href="admin.html"
-                    ><i class="bx bx-printer" style="margin-right: 5px"></i
-                    >Print</a
-                  >
-                </div>
-              </li>
-            </ul>
           </div>
         </div>
       </div>
@@ -165,16 +158,15 @@
         } else sidebarBtn.classList.replace("bx-menu-alt-right", "bx-menu");
       };
 
-      function konfirmasi() {
-        var tanya = confirm("Apakah Anda Yakin ?");
+      function confirmation() {
+        var ask = confirm("Apakah Anda Yakin ?");
 
-        if (tanya === true) {
+        if (ask === true) {
           window.location = "login.html";
         } else {
         }
       }
-
-      function pindah(url) {
+      function move(url) {
         window.location = url;
       }
     </script>
