--- a/templates/addStudent.html
+++ b/templates/addStudent.html
@@ -26,43 +26,43 @@
           </a>
         </li>
         <li>
-          <a href="riwayat.html">
+          <a href="history.html">
             <i class="bx bx-history"></i>
             <span class="links_name">Riwayat Login</span>
           </a>
         </li>
         <li>
-          <a href="laporan.html">
+          <a href="report.html">
             <i class="bx bxs-report"></i>
             <span class="links_name">Laporan Akhir</span>
           </a>
         </li>
         <li>
-          <a href="guru.html">
-            <i class="bx bxs-user-rectangle"></i>
+          <a href="teacher.html">
+            <i class="bx bxs-user-rectangle bx-tada"></i>
             <span class="links_name">Data Guru</span>
           </a>
         </li>
         <li>
-          <a href="#" class="active">
+          <a href="student.html" class="active">
             <i class="bx bx-book-reader bx-tada"></i>
             <span class="links_name">Data Siswa</span>
           </a>
         </li>
         <li>
-          <a href="kelas.html">
+          <a href="class.html">
             <i class="bx bx-building-house"></i>
             <span class="links_name">Data Kelas</span>
           </a>
         </li>
         <li>
-          <a href="mapel.html">
+          <a href="course.html">
             <i class="bx bx-book-open"></i>
             <span class="links_name">Data Mapel</span>
           </a>
         </li>
         <li class="log_out">
-          <a href="#" onclick="konfirmasi()">
+          <a href="#" onclick="confirmation()">
             <i class="bx bx-log-out"></i>
             <span class="links_name">Log out</span>
           </a>
@@ -73,13 +73,13 @@
       <nav>
         <div class="sidebar-button">
           <i class="bx bxs-user-circle"></i>
-          <span class="dashboard">Data Siswa</span>
+          <span class="dashboard">Input</span>
         </div>
         <div class="search-box">
           <input type="text" placeholder="Search..." />
           <i class="bx bx-search"></i>
         </div>
-        <div class="profile-details" onclick="pindah('profil.html')">
+        <div class="profile-details" onclick="move('profile.html')">
           <i class="bx bxs-user-circle"></i>
           <span class="admin_name">Username (Level)</span>
           <i class="bx bx-log-in-circle"></i>
@@ -90,59 +90,67 @@
         <div class="update-boxes2" data-aos="fade-right">
           <div class="recent-update box">
             <div class="title">Siswa</div>
-            <div class="update-details" style="float: none">
-              <ul class="details">
-                <li class="topic">Nama</li>
-                <li>nama1</li>
-                <li>nama2</li>
+            <div class="update-details">
+              <ul class="details" style="width: 150px; height: 150px">
+                <li class="topic" style="width: 150px; height: 150px">
+                  <i
+                    class="bx bx-user-circle"
+                    style="font-size: 150px; color: #0a2558"
+                  ></i>
+                </li>
               </ul>
               <ul class="details">
+                <li class="topic">Nama Siswa</li>
                 <li class="topic">NIK</li>
-                <li>010101</li>
-                <li>020202</li>
-              </ul>
-              <ul class="details">
                 <li class="topic">Jenis Kelamin</li>
-                <li>Laki-Laki</li>
-                <li>Perempuan</li>
+                <li class="topic">Kelas</li>
               </ul>
               <ul class="details">
-                <li class="topic">Kelas</li>
-                <li>XI-RPL 1</li>
-                <li>XI-RPL 2</li>
+                <li>:</li>
+                <li>:</li>
+                <li>:</li>
+                <li>:</li>
               </ul>
-              <ul class="details" style="text-align: center">
-                <li class="topic">Tindakan</li>
+              <ul class="details">
                 <li>
-                  <ul class="action">
-                    <li>
-                      <a href="editSiswa.html" class="edit">Edit</a>
-                    </li>
-                    <li>
-                      <a href="#" class="delete" onclick="konfirmasi2()"
-                        >Hapus</a
-                      >
-                    </li>
-                  </ul>
+                  <input
+                    type="text"
+                    name="studentName"
+                    id="studentName"
+                    placeholder="Masukan Nama"
+                  />
                 </li>
                 <li>
-                  <ul class="action">
-                    <li>
-                      <a href="editSiswa.html" class="edit">Edit</a>
-                    </li>
-                    <li>
-                      <a href="#" class="delete" onclick="konfirmasi2()"
-                        >Hapus</a
-                      >
-                    </li>
-                  </ul>
+                  <input
+                    type="text"
+                    name="nik"
+                    id="nik"
+                    placeholder="Masukan NIK"
+                  />
+                </li>
+                <li>
+                  <input
+                    type="text"
+                    name="gender"
+                    id="gender"
+                    placeholder="Masukkan Jenis Kelamin"
+                  />
+                </li>
+                <li>
+                  <input
+                    type="text"
+                    name="class"
+                    id="class"
+                    placeholder="Masukkan Kelas"
+                  />
                 </li>
               </ul>
             </div>
             <div class="button">
-              <a href="tambahSiswa.html"
-                ><i class="bx bxs-user-plus bx-xs" style="margin-right: 5px"></i
-                >Tambah</a
+              <a
+                href="student.html"
+                onClick="alert('Data Siswa Berhasil Ditambahkan')"
+                >Simpan</a
               >
             </div>
           </div>
@@ -160,25 +168,15 @@
         } else sidebarBtn.classList.replace("bx-menu-alt-right", "bx-menu");
       };
 
-      function konfirmasi() {
-        var tanya = confirm("Apakah Anda Yakin ?");
+      function confirmation() {
+        var ask = confirm("Apakah Anda Yakin ?");
 
-        if (tanya === true) {
+        if (ask === true) {
           window.location = "login.html";
         } else {
         }
       }
-
-      function konfirmasi2() {
-        var tanya = confirm("Apakah Anda Yakin ?");
-
-        if (tanya === true) {
-          alert("Data Berhasil Dihapus");
-        } else {
-        }
-      }
-
-      function pindah(url) {
+      function move(url) {
         window.location = url;
       }
     </script>
