--- a/templates/course.html
+++ b/templates/course.html
@@ -26,43 +26,43 @@
           </a>
         </li>
         <li>
-          <a href="riwayat.html">
+          <a href="#">
             <i class="bx bx-history"></i>
             <span class="links_name">Riwayat Login</span>
           </a>
         </li>
         <li>
-          <a href="laporan.html">
+          <a href="report.html">
             <i class="bx bxs-report"></i>
             <span class="links_name">Laporan Akhir</span>
           </a>
         </li>
         <li>
-          <a href="guru.html">
-            <i class="bx bxs-user-rectangle bx-tada"></i>
+          <a href="teacher.html">
+            <i class="bx bxs-user-rectangle"></i>
             <span class="links_name">Data Guru</span>
           </a>
         </li>
         <li>
-          <a href="siswa.html">
+          <a href="student.html">
             <i class="bx bx-book-reader"></i>
             <span class="links_name">Data Siswa</span>
           </a>
         </li>
         <li>
-          <a href="kelas.html" class="active">
-            <i class="bx bx-building-house bx-tada"></i>
+          <a href="class.html">
+            <i class="bx bx-building-house"></i>
             <span class="links_name">Data Kelas</span>
           </a>
         </li>
         <li>
-          <a href="mapel.html" class="active">
+          <a href="#" class="active">
             <i class="bx bx-book-open bx-tada"></i>
             <span class="links_name">Data Mapel</span>
           </a>
         </li>
         <li class="log_out">
-          <a href="#" onclick="konfirmasi()">
+          <a href="#" onclick="confirmation()">
             <i class="bx bx-log-out"></i>
             <span class="links_name">Log out</span>
           </a>
@@ -73,13 +73,13 @@
       <nav>
         <div class="sidebar-button">
           <i class="bx bxs-user-circle"></i>
-          <span class="dashboard">Input</span>
+          <span class="dashboard">Data mapel</span>
         </div>
         <div class="search-box">
           <input type="text" placeholder="Search..." />
           <i class="bx bx-search"></i>
         </div>
-        <div class="profile-details" onclick="pindah('profil.html')">
+        <div class="profile-details" onclick="move('profile.html')">
           <i class="bx bxs-user-circle"></i>
           <span class="admin_name">Username (Level)</span>
           <i class="bx bx-log-in-circle"></i>
@@ -90,57 +90,59 @@
         <div class="update-boxes2" data-aos="fade-right">
           <div class="recent-update box">
             <div class="title">Mapel</div>
-            <div class="update-details">
-              <ul class="details" style="width: 150px; height: 150px">
-                <li class="topic" style="width: 150px; height: 150px">
-                  <i
-                    class="bx bx-book-open"
-                    style="color: #0a2558; font-size: 150px"
-                  ></i>
-                </li>
+            <div class="update-details" style="float: none">
+              <ul class="details">
+                <li class="topic">No</li>
+                <li>1</li>
+                <li>2</li>
               </ul>
               <ul class="details">
                 <li class="topic">Nama</li>
+                <li>MTK</li>
+                <li>PBO</li>
+              </ul>
+              <ul class="details">
                 <li class="topic">Jurusan</li>
+                <li>Umum</li>
+                <li>RPL</li>
+              </ul>
+              <ul class="details">
                 <li class="topic">Pengajar</li>
+                <li>nama 1</li>
+                <li>nama 2</li>
               </ul>
-              <ul class="details">
-                <li>:</li>
-                <li>:</li>
-                <li>:</li>
-              </ul>
-              <ul class="details">
+              <ul class="details" style="text-align: center">
+                <li class="topic">Tindakan</li>
                 <li>
-                  <input
-                    type="text"
-                    name="namaMapel"
-                    id="namaMapel"
-                    placeholder="Masukan Nama"
-                  />
+                  <ul class="action">
+                    <li>
+                      <a href="editCourse.html" class="edit">Edit</a>
+                    </li>
+                    <li>
+                      <a href="#" class="delete" onclick="confirmation2()"
+                        >Hapus</a
+                      >
+                    </li>
+                  </ul>
                 </li>
                 <li>
-                  <input
-                    type="text"
-                    name="jurusan"
-                    id="jurusan"
-                    placeholder="Masukan Jurusan"
-                  />
-                </li>
-                <li>
-                  <input
-                    type="text"
-                    name="pengajar"
-                    id="pengajar"
-                    placeholder="Masukkan Pengajar"
-                  />
+                  <ul class="action">
+                    <li>
+                      <a href="editCourse.html" class="edit">Edit</a>
+                    </li>
+                    <li>
+                      <a href="#" class="delete" onclick="confirmation2()"
+                        >Hapus</a
+                      >
+                    </li>
+                  </ul>
                 </li>
               </ul>
             </div>
             <div class="button">
-              <a
-                href="mapel.html"
-                onClick="alert('Data Mapel Berhasil Ditambahkan')"
-                >Simpan</a
+              <a href="addCourse.html"
+                ><i class="bx bxs-user-plus bx-xs" style="margin-right: 5px"></i
+                >Tambah</a
               >
             </div>
           </div>
@@ -158,15 +160,25 @@
         } else sidebarBtn.classList.replace("bx-menu-alt-right", "bx-menu");
       };
 
-      function konfirmasi() {
-        var tanya = confirm("Apakah Anda Yakin ?");
+      function confirmation() {
+        var ask = confirm("Apakah Anda Yakin ?");
 
-        if (tanya === true) {
+        if (ask === true) {
           window.location = "login.html";
         } else {
         }
       }
-      function pindah(url) {
+
+      function confirmation2() {
+        var ask = confirm("Apakah Anda Yakin ?");
+
+        if (ask === true) {
+          alert("Data Berhasil Dihapus");
+        } else {
+        }
+      }
+
+      function move(url) {
         window.location = url;
       }
     </script>
