--- a/templates/editCourse.html
+++ b/templates/editCourse.html
@@ -26,43 +26,43 @@
           </a>
         </li>
         <li>
-          <a href="riwayat.html">
+          <a href="history.html">
             <i class="bx bx-history"></i>
             <span class="links_name">Riwayat Login</span>
           </a>
         </li>
         <li>
-          <a href="laporan.html">
+          <a href="report.html">
             <i class="bx bxs-report"></i>
             <span class="links_name">Laporan Akhir</span>
           </a>
         </li>
         <li>
-          <a href="guru.html" class="active">
-            <i class="bx bxs-user-rectangle bx-tada"></i>
+          <a href="teacher.html">
+            <i class="bx bxs-user-rectangle"></i>
             <span class="links_name">Data Guru</span>
           </a>
         </li>
         <li>
-          <a href="siswa.html">
-            <i class="bx bx-book-reader"></i>
+          <a href="student.html">
+            <i class="bx bx-book-reader bx-tada"></i>
             <span class="links_name">Data Siswa</span>
           </a>
         </li>
         <li>
-          <a href="kelas.html">
+          <a href="class.html" class="active">
             <i class="bx bx-building-house"></i>
             <span class="links_name">Data Kelas</span>
           </a>
         </li>
         <li>
-          <a href="mapel.html">
-            <i class="bx bx-book-open"></i>
+          <a href="course.html" class="active">
+            <i class="bx bx-book-open bx-tada"></i>
             <span class="links_name">Data Mapel</span>
           </a>
         </li>
         <li class="log_out">
-          <a href="#" onclick="konfirmasi()">
+          <a href="#" onclick="confirmation()">
             <i class="bx bx-log-out"></i>
             <span class="links_name">Log out</span>
           </a>
@@ -73,13 +73,13 @@
       <nav>
         <div class="sidebar-button">
           <i class="bx bxs-user-circle"></i>
-          <span class="dashboard">Input</span>
+          <span class="dashboard">Edit</span>
         </div>
         <div class="search-box">
           <input type="text" placeholder="Search..." />
           <i class="bx bx-search"></i>
         </div>
-        <div class="profile-details" onclick="pindah('profil.html')">
+        <div class="profile-details" onclick="move('profile.html')">
           <i class="bx bxs-user-circle"></i>
           <span class="admin_name">Username (Level)</span>
           <i class="bx bx-log-in-circle"></i>
@@ -89,28 +89,22 @@
       <div class="home-content">
         <div class="update-boxes2" data-aos="fade-right">
           <div class="recent-update box">
-            <div class="title">Guru</div>
+            <div class="title">Mapel</div>
             <div class="update-details">
               <ul class="details" style="width: 150px; height: 150px">
                 <li class="topic" style="width: 150px; height: 150px">
                   <i
-                    class="bx bx-user-circle"
-                    style="font-size: 150px; color: #0a2558"
+                    class="bx bx-book-open"
+                    style="color: #0a2558; font-size: 150px"
                   ></i>
                 </li>
               </ul>
               <ul class="details">
-                <li class="topic">Username</li>
-                <li class="topic">Password</li>
-                <li class="topic">NIP</li>
-                <li class="topic">Jenis Kelamin</li>
-                <li class="topic">Level</li>
-                <li class="topic">Kelas</li>
+                <li class="topic">Nama</li>
+                <li class="topic">Jurusan</li>
+                <li class="topic">Pengajar</li>
               </ul>
               <ul class="details">
-                <li>:</li>
-                <li>:</li>
-                <li>:</li>
                 <li>:</li>
                 <li>:</li>
                 <li>:</li>
@@ -119,58 +113,37 @@
                 <li>
                   <input
                     type="text"
-                    name="username"
-                    id="username"
-                    placeholder="Masukan Nama"
-                  />
-                </li>
-                <li>
-                  <input
-                    type="password"
-                    name="password"
-                    id="password"
-                    placeholder="Masukan Password"
+                    name="courseName"
+                    id="courseName"
+                    placeholder="Nama Mapel"
+                    style="width: 230%"
                   />
                 </li>
                 <li>
                   <input
                     type="text"
-                    name="nip"
-                    id="nip"
-                    placeholder="Masukkan NIP"
+                    name="major"
+                    id="major"
+                    placeholder="Jurusan"
+                    style="width: 230%"
                   />
                 </li>
                 <li>
                   <input
                     type="text"
-                    name="jk"
-                    id="jk"
-                    placeholder="Masukkan Jenis Kelamin"
-                  />
-                </li>
-                <li>
-                  <input
-                    type="text"
-                    name="admin"
-                    id="admin"
-                    placeholder="Masukkan Level"
-                  />
-                </li>
-                <li>
-                  <input
-                    type="text"
-                    name="kelas"
-                    id="kelas"
-                    placeholder="Masukkan Kelas"
+                    name="teacher"
+                    id="teacher"
+                    placeholder="Pengajar"
+                    style="width: 230%"
                   />
                 </li>
               </ul>
             </div>
             <div class="button">
               <a
-                href="guru.html"
-                onClick="alert('Data Guru Berhasil Ditambahkan')"
-                >Simpan</a
+                href="course.html"
+                onClick="alert('Data Mapel Berhasil Diubah')"
+                ><i class="bx bx-save" style="margin-right: 5px"></i>Simpan</a
               >
             </div>
           </div>
@@ -188,15 +161,15 @@
         } else sidebarBtn.classList.replace("bx-menu-alt-right", "bx-menu");
       };
 
-      function konfirmasi() {
-        var tanya = confirm("Apakah Anda Yakin ?");
+      function confirmation() {
+        var ask = confirm("Apakah Anda Yakin ?");
 
-        if (tanya === true) {
+        if (ask === true) {
           window.location = "login.html";
         } else {
         }
       }
-      function pindah(url) {
+      function move(url) {
         window.location = url;
       }
     </script>
