--- a/templates/history.html
+++ b/templates/history.html
@@ -26,43 +26,43 @@
           </a>
         </li>
         <li>
-          <a href="#">
-            <i class="bx bx-history"></i>
+          <a href="#" class="active">
+            <i class="bx bx-history bx-spin"></i>
             <span class="links_name">Riwayat Login</span>
           </a>
         </li>
         <li>
-          <a href="laporan.html">
+          <a href="report.html">
             <i class="bx bxs-report"></i>
             <span class="links_name">Laporan Akhir</span>
           </a>
         </li>
         <li>
-          <a href="guru.html">
+          <a href="teacher.html">
             <i class="bx bxs-user-rectangle"></i>
             <span class="links_name">Data Guru</span>
           </a>
         </li>
         <li>
-          <a href="siswa.html">
+          <a href="student.html">
             <i class="bx bx-book-reader"></i>
             <span class="links_name">Data Siswa</span>
           </a>
         </li>
         <li>
-          <a href="kelas.html">
+          <a href="class.html">
             <i class="bx bx-building-house"></i>
             <span class="links_name">Data Kelas</span>
           </a>
         </li>
         <li>
-          <a href="#" class="active">
-            <i class="bx bx-book-open bx-tada"></i>
+          <a href="course.html">
+            <i class="bx bx-book-open"></i>
             <span class="links_name">Data Mapel</span>
           </a>
         </li>
         <li class="log_out">
-          <a href="#" onclick="konfirmasi()">
+          <a href="#" onclick="confirmation()">
             <i class="bx bx-log-out"></i>
             <span class="links_name">Log out</span>
           </a>
@@ -73,13 +73,13 @@
       <nav>
         <div class="sidebar-button">
           <i class="bx bxs-user-circle"></i>
-          <span class="dashboard">Data mapel</span>
+          <span class="dashboard">Riwayat</span>
         </div>
         <div class="search-box">
           <input type="text" placeholder="Search..." />
           <i class="bx bx-search"></i>
         </div>
-        <div class="profile-details" onclick="pindah('profil.html')">
+        <div class="profile-details" onclick="move('profile.html')">
           <i class="bx bxs-user-circle"></i>
           <span class="admin_name">Username (Level)</span>
           <i class="bx bx-log-in-circle"></i>
@@ -87,59 +87,62 @@
       </nav>
 
       <div class="home-content">
-        <div class="update-boxes2" data-aos="fade-right">
+        <div class="update-boxes" data-aos="fade-right">
           <div class="recent-update box">
-            <div class="title">Mapel</div>
-            <div class="update-details" style="float: none">
+            <div class="title">Riwayat</div>
+            <div class="update-details">
               <ul class="details">
-                <li class="topic">Nama</li>
-                <li>MTK</li>
-                <li>PBO</li>
+                <li class="topic">No</li>
+                <li>1</li>
+                <li>2</li>
               </ul>
               <ul class="details">
-                <li class="topic">Jurusan</li>
-                <li>Umum</li>
-                <li>RPL</li>
+                <li class="topic">Waktu</li>
+                <li>09.30</li>
+                <li>08.00</li>
               </ul>
               <ul class="details">
-                <li class="topic">Pengajar</li>
-                <li>nama 1</li>
-                <li>nama 2</li>
+                <li class="topic">Tanggal</li>
+                <li>17-02-2022</li>
+                <li>18-02-2022</li>
               </ul>
-              <ul class="details" style="text-align: center">
-                <li class="topic">Tindakan</li>
-                <li>
-                  <ul class="action">
-                    <li>
-                      <a href="editMapel.html" class="edit">Edit</a>
-                    </li>
-                    <li>
-                      <a href="#" class="delete" onclick="konfirmasi2()"
-                        >Hapus</a
-                      >
-                    </li>
-                  </ul>
-                </li>
-                <li>
-                  <ul class="action">
-                    <li>
-                      <a href="editMapel.html" class="edit">Edit</a>
-                    </li>
-                    <li>
-                      <a href="#" class="delete" onclick="konfirmasi2()"
-                        >Hapus</a
-                      >
-                    </li>
-                  </ul>
-                </li>
+              <ul class="details">
+                <li class="topic">User</li>
+                <li>Username</li>
+                <li>Username</li>
+              </ul>
+              <ul class="details">
+                <li class="topic">Kelas</li>
+                <li>XI-RPL 1</li>
+                <li>XI-RPL 2</li>
               </ul>
             </div>
             <div class="button">
-              <a href="tambahMapel.html"
-                ><i class="bx bxs-user-plus bx-xs" style="margin-right: 5px"></i
-                >Tambah</a
-              >
+              <a href="#">See All</a>
             </div>
+          </div>
+          <div class="top-update box" data-aos="fade-left">
+            <div class="title">Wali Kelas</div>
+            <ul class="top-update-details">
+              <li>
+                <a href="#">
+                  <img
+                    src="https://img.icons8.com/external-nawicon-flat-nawicon/50/000000/external-teacher-back-to-school-nawicon-flat-nawicon.png"
+                  />
+                  <span class="item">Nama</span>
+                </a>
+                <span class="desc">Kelas</span>
+              </li>
+              <li>
+                <a href="#">
+                  <img
+                    src="https://img.icons8.com/external-nawicon-flat-nawicon/50/000000/external-teacher-back-to-school-nawicon-flat-nawicon-2.png"
+                  />
+                  <span class="item">Nama</span>
+                </a>
+                <span class="desc">kelas</span>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
@@ -155,25 +158,16 @@
         } else sidebarBtn.classList.replace("bx-menu-alt-right", "bx-menu");
       };
 
-      function konfirmasi() {
-        var tanya = confirm("Apakah Anda Yakin ?");
+      function confirmation() {
+        var ask = confirm("Apakah Anda Yakin ?");
 
-        if (tanya === true) {
+        if (ask === true) {
           window.location = "login.html";
         } else {
         }
       }
 
-      function konfirmasi2() {
-        var tanya = confirm("Apakah Anda Yakin ?");
-
-        if (tanya === true) {
-          alert("Data Berhasil Dihapus");
-        } else {
-        }
-      }
-
-      function pindah(url) {
+      function move(url) {
         window.location = url;
       }
     </script>
