--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,3 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -15,7 +14,7 @@
       integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="{% static 'css/style2.css' %}" />
+    <link rel="stylesheet" href="./style2.css" />
   </head>
   <body>
     <div class="box-form">
@@ -26,22 +25,22 @@
       <div class="right">
         <h5>Login</h5>
         <div class="inputs">
-          <input type="text" name="uid" placeholder="NIP" />
+          <input type="text" placeholder="Username" />
           <br />
-          <input type="password" name="password" placeholder="password" />
+          <input type="password" placeholder="password" />
         </div>
 
         <br /><br />
 
         <br />
-        <button onclick="pindah('admin.html')">Login</button>
+        <button onclick="move('admin.html')">Login</button>
       </div>
     </div>
   </body>
 </html>
 
 <script type="text/javascript">
-  function pindah(url) {
+  function move(url) {
     window.location = url;
   }
 </script>
