--- a/templates/profile.html
+++ b/templates/profile.html
@@ -8,8 +8,8 @@
       href="https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="fontawesome/css/all.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script type="text/javascript" src="chartjs/Chart.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body>
@@ -20,8 +20,8 @@
       </div>
       <ul class="nav-links">
         <li>
-          <a href="#" class="active">
-            <i class="bx bx-grid-alt bx-tada"></i>
+          <a href="admin.html">
+            <i class="bx bx-grid-alt"></i>
             <span class="links_name">Dashboard</span>
           </a>
         </li>
@@ -79,7 +79,7 @@
           <input type="text" placeholder="Search..." />
           <i class="bx bx-search"></i>
         </div>
-        <div class="profile-details" onclick="move('profile.html')">
+        <div class="profile-details">
           <i class="bx bxs-user-circle"></i>
           <span class="admin_name">Username (Level)</span>
           <i class="bx bx-log-in-circle"></i>
@@ -87,100 +87,46 @@
       </nav>
 
       <div class="home-content">
-        <div class="overview-boxes">
-          <div class="box" data-aos="fade-right">
-            <div class="right-side">
-              <div class="box-topic">Guru</div>
-              <div class="number">100</div>
-              <div class="indicator">
-                <i class="bx bxs-edit"></i>
-                <span class="text">Terkahir Diedit</span>
-              </div>
-            </div>
-            <i class="bx bxs-circle-three-quarter logo bx-spin"></i>
-          </div>
-          <div class="box" data-aos="fade-down">
-            <div class="right-side">
-              <div class="box-topic">Kelas</div>
-              <div class="number">38</div>
-              <div class="indicator">
-                <i class="bx bxs-edit"></i>
-                <span class="text">Terkahir Diedit</span>
-              </div>
-            </div>
-            <i class="bx bxs-circle-three-quarter logo two bx-spin"></i>
-          </div>
-          <div class="box" data-aos="fade-down">
-            <div class="right-side">
-              <div class="box-topic">Siswa</div>
-              <div class="number">300</div>
-              <div class="indicator">
-                <i class="bx bxs-edit"></i>
-                <span class="text">Terakhir Diedit</span>
-              </div>
-            </div>
-            <i class="bx bxs-circle-three-quarter logo three bx-spin"></i>
-          </div>
-          <div class="box" data-aos="fade-left">
-            <div class="right-side">
-              <div class="box-topic">Mapel</div>
-              <div class="number">15</div>
-              <div class="indicator">
-                <i class="bx bxs-edit"></i>
-                <span class="text">Terkahir Diedit</span>
-              </div>
-            </div>
-            <i class="bx bxs-circle-three-quarter logo four bx-spin"></i>
-          </div>
-        </div>
-
-        <div class="update-boxes">
-          <div class="recent-update box" data-aos="fade-right">
-            <div class="title">Update</div>
+        <div class="update-boxes2" data-aos="fade-right">
+          <div class="recent-update box">
+            <div class="title">Profil</div>
             <div class="update-details">
-              <ul class="details">
-                <li class="topic">Tanggal</li>
-                <li>17-02-2022</li>
-                <li>18-02-2022</li>
+              <ul class="details" style="width: 150px; height: 150px">
+                <li class="topic" style="width: 150px; height: 150px">
+                  <i
+                    class="bx bx-user-circle"
+                    style="font-size: 150px; color: #0a2558"
+                  ></i>
+                </li>
               </ul>
               <ul class="details">
-                <li class="topic">User</li>
-                <li>Username</li>
-                <li>Username</li>
-              </ul>
-              <ul class="details">
+                <li class="topic">Username(Level)</li>
+                <li class="topic">Password</li>
                 <li class="topic">Kelas</li>
-                <li>XI-RPL 1</li>
-                <li>XI-RPL 2</li>
               </ul>
               <ul class="details">
-                <li class="topic">Tindakan</li>
-                <li>Input</li>
-                <li>Update</li>
+                <li>:</li>
+                <li>:</li>
+                <li>:</li>
+              </ul>
+              <ul class="details">
+                <li>
+                  Username
+                  <hr />
+                </li>
+                <li>
+                  ********
+                  <hr />
+                </li>
+                <li>
+                  XI-RPL 1
+                  <hr />
+                </li>
               </ul>
             </div>
             <div class="button">
-              <a href="#">See All</a>
+              <a href="edit.html">Edit Profil</a>
             </div>
-          </div>
-          <div class="top-update box" data-aos="fade-left">
-            <div class="title">Progres(%)</div>
-            <ul class="top-update-details">
-              <li>
-                <a href="#">
-                  <i class="bx bx-loader-alt bx-spin" style="color: blue"></i>
-                  <span class="item">XI-RPL1</span>
-                </a>
-                <span class="desc">10%</span>
-              </li>
-              <li>
-                <a href="#">
-                  <i class="bx bx-loader-alt bx-spin" style="color: blue"></i>
-                  <span class="item">XI-RPL2</span>
-                </a>
-                <span class="desc">30%</span>
-              </li>
-            </ul>
           </div>
         </div>
       </div>
@@ -203,10 +149,6 @@
           window.location = "login.html";
         } else {
         }
-      }
-
-      function move(url) {
-        window.location = url;
       }
     </script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
